- 
    Bug 
- 
    Resolution: Done
- 
    P1: Critical 
- 
    5.13.1
- 
    ArchLinux
 pepper-flash-32.0.0.255
- 
        
- 
        e72fd5136c5a7a848d9156334cf8f067eb1a1a10 (qt/qtwebengine/5.14.0) 5f05d9d1a3e0f30d4e7cccfe2d70387437fcccf3 (qt/qtwebengine/5.12)
- launch simplebrowser (from QtWebEngine's example)
- go to URL which contains flash content.
- "Couldn't load plugin" show up on the page.
- following error message (I assume that it comes from the plugin) show up in console
[ERROR:flash/platform/pepper/pep_module.cpp(143)] Browser does not support interface PPB_TCPSocket_Private;0.5|PPB_TCPSocket_Private;0.4|PPB_TCPSocket_Private;0.3. 
- is duplicated by
- 
                    QTBUG-78965 ***Panic Report*** pepflashplayer.dll couldn't load plugin -           
- Closed
 
-         
- relates to
- 
                    QTBUG-82012 Add plugin placeholder when ppapi can’t be loaded. -         
- Closed
 
-         
| For Gerrit Dashboard: QTBUG-78280 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 280380,3 | Fix pepper flash plugin permission | 5.14.0 | qt/qtwebengine | Status: MERGED | +2 | 0 | 
| 284128,2 | Fix pepper flash plugin permission | 5.12 | qt/qtwebengine | Status: MERGED | +2 | 0 | 
| 286282,5 | Add placeholder and permission request for pepper flash plugin | dev | qt/qtwebengine | Status: ABANDONED | 0 | 0 |