Fix pepper flash plugin permission

Fixes: QTBUG-78280
Fixes: QTBUG-80696
Change-Id: Ic202314bb7935741791fa8c747e255b10dc7dc61
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
Reviewed-by: Florian Bruhin <qt-project.org@the-compiler.org>
(cherry picked from commit e72fd5136c5a7a848d9156334cf8f067eb1a1a10)